# GromacsWrapper

./: .codecov.yml  .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CHANGES  COPYING  INSTALL  INSTALL.rst  MANIFEST.in  README  README.rst  codecov.yml  environment.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: black.yaml  ci.yaml  deploy.yaml
ci/: environment.yml  requirements.txt
ci/conda-envs/: test_env.yaml
ci/readthedocs/: environment.yml  requirements.txt
doc/: notes.txt
doc/html/: .buildinfo  INSTALL.html  README.html  alternatives.html  analysis.html  auxiliary.html  edpdb.html  genindex.html  gromacs.html  index.html  installation.html  modindex.html  numkit.html  objects.inv  py-modindex.html  search.html  searchindex.js  staging.html  vmd.html
doc/html/_sources/: INSTALL.txt  README.txt  alternatives.txt  analysis.txt  auxiliary.txt  index.txt  numkit.txt  staging.txt
doc/html/_sources/analysis/: core.txt  support.txt
doc/html/_sources/edpdb/: cbook.txt  init.txt  xpdb.txt
doc/html/_sources/gromacs/: building_blocks.txt  core.txt  init.txt  tools.txt
doc/html/_sources/gromacs/blocks/: cbook.txt  qsub.txt  setup.txt  simulation.txt
doc/html/_sources/gromacs/core/: config.txt  core.txt  environment.txt  formats.txt  utilities.txt
doc/html/_sources/numkit/: fitting.txt  integration.txt  timeseries.txt
doc/html/_sources/staging/: Local.txt  SunGridEngine.txt
doc/html/analysis/: core.html  plugins.html  support.html
doc/html/edpdb/: cbook.html  helpers.html  init.html  selections.html  xpdb.html
doc/html/gromacs/: building_blocks.html  core.html  init.html  tools.html
doc/html/gromacs/blocks/: cbook.html  manager.html  qsub.html  setup.html  simulation.html
doc/html/gromacs/core/: config.html  core.html  environment.html  formats.html  tools.html  utilities.html
doc/html/numkit/: fitting.html  integration.html  observables.html  timeseries.html
doc/html/staging/: Local.html  SunGridEngine.html  init.html
doc/sphinx/: Makefile
doc/sphinx/source/: COPYING.LESSER.txt  INSTALL.txt  README.txt  alternatives.txt  analysis.txt  auxiliary.txt  conf.py  configuration.txt  edpdb.txt  gromacs.txt  index.txt  installation.txt  numkit.txt  quickstart.txt  staging.txt  vmd.txt
doc/sphinx/source/analysis/: core.txt  plugins.txt  support.txt
doc/sphinx/source/edpdb/: helpers.txt  selections.txt
doc/sphinx/source/gromacs/: building_blocks.txt  core.txt  init.txt  tools.txt
doc/sphinx/source/numkit/: observables.txt
doc/sphinx/source/staging/: init.txt
edPDB/: __init__.py  cbook.py  log.py  selections.py  utilities.py  xpdb.py
gromacs/: __init__.py  _version.py  cbook.py  collections.py  config.py  core.py  environment.py  exceptions.py  formats.py  log.py  manager.py  odict.py  qsub.py  run.py  scaling.py  setup.py  simulation.py  testing.py  tools.py  utilities.py  version.py
gromacs/analysis/: __init__.py  collections.py  core.py  mindist.py  numkit.py  plugins.py
gromacs/analysis/plugins/: CysAccessibility.py  Distances.py  __init__.py  com.py  cysaccessibility.py  dihedrals.py  dist.py  distances.py  energy.py  fitcompact.py  gridmatmd.py  hbonds.py  helixbundle.py  ls.py  mindist.py  mindistances.py  proteinonly.py  rmsd.py  rmsf.py  stripwater.py  template_plugin.py  trajectories.py
gromacs/fileformats/: __init__.py  blocks.py  convert.py  gro.py  itp.py  mdp.py  ndx.py  preprocessor.py  pypreprocessor.py  top.py  xpm.py  xvg.py
gromacs/templates/: astrocyte.sge  darwin.sh  deathspud.sge  em.mdp  fep_equil_constv0.mdp  fep_min_lbgfs0.mdp  fep_prod0.mdp  glial451.pbs  gromacswrapper.cfg  gromacswrapper_465.cfg  hector.pbs  hpcx.ll  jade.pbs  local.sh  md.mdp  md_CHARMM27.mdp  md_CHARMM27_gpu.mdp  md_G43a1.mdp  md_OPLSAA.mdp  md_OPLSAA_gpu.mdp  neuron.sge
gromacs/testing/: __init__.py  nosetester.py
gromacs/tests/: conftest.py  datafiles.py  test_basic.py  test_cbook.py  test_config.py  test_core.py  test_example.py  test_log.py  test_mdp.py  test_qsub.py  test_run.py  test_setup.py  test_tools.py  test_utilities.py  test_version.py
gromacs/tests/data/: custom_em.mdp  simple.ndx
gromacs/tests/data/fileformats-top/: README.txt  test.py
gromacs/tests/fileformats/: test_xvg.py
gromacs/tests/fileformats/top/: test_amber03star.py  test_amber03w.py  test_charmm22.py  top.py
gromacs/tests/test_fileformats/: #mdout.mdp.1#  #mdout.mdp.2#  mdout.mdp  test_fileformats.py
gromacs/tests/test_fileformats/test_top/: base.py  scaled.top  test_amber03star.py  test_amber03w.py  test_charmm22.py  test_top.py  top.py
maintainer/: distribute.sh
numkit/: __init__.py  fitting.py  integration.py  observables.py  timeseries.py
numkit/tests/: __init__.py  test_integration.py
paper/: codemeta.json  paper.bib  paper.md
scripts/: distribute.sh  gw-fit_strip_trajectories.py  gw-forcefield.py  gw-join_parts.py  gw-merge_topologies.py  gw-partial_tempering-amber03w.py  gw-partial_tempering.py  make_epydoc.sh
staging/: Local.py  SunGridEngine.py  __init__.py  common.py
staging/extra/: cleanup.py  testing.sge
tests/: __init__.py  conftest.py  datafiles.py  test_cbook.py  test_collections.py  test_config.py  test_core.py  test_log.py  test_ndx.py  test_qsub.py  test_run.py  test_setup.py  test_tools.py  test_utilities.py  test_version.py
tests/data/: custom_em.mdp
tests/data/fileformats/: ss.xpm.bz2
tests/fileformats/: __init__.py  test_convert.py  test_mdp.py  test_ndx.py  test_xpm.py  test_xvg.py
tests/fileformats/top/: __init__.py  test_TOP.py  test_amber03star.py  test_amber03w.py  test_charmm22.py  top.py
tests/itp-reader/: grompp.mdp  test.sh  test_energies.py
tests/itp-reader/amber03w/: processed.top
tests/itp-reader/charmm22st/: conf.gro  processed.top
vmd/: __init__.py  control.py  remote_ctl.tcl
(+34 files in other folders)
